2003-01-30  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R:
	Incorporate change from Brian Ripley in response to Dieter Menne

	* man/lme.lmList.Rd, man/lme.groupedData.Rd, man/lme.Rd:
	Documentation of the contrasts argument added (Greg Warnes).

2003-01-30  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (lme.formula): Incorporate Greg Warnes' changes for
	the contrasts argument.

	* R/nlsList.R: Correct check for is.null(class(FUN))

2002-12-27  Douglas Bates  <bates@stat.wisc.edu>

	* R/newFunc.R (gsummary): Fix comparison in check for varying
	columns (PR#1775 - bug report with fix provided by Dieter Menne.

2002-12-11  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (print.lme): Removed one more as.vector()

	* R/varFunc.R (print.summary.varFixed): changed  instances of
	deparse(as.vector(x)) to deparse(x) here and in many other places.

2002-09-10  Saikat DebRoy  <saikat@stat.wisc.edu>

	* nlsList.R (nlsList.formula): Use "try" instead of "restart".

2002-08-09  Douglas Bates  <bates@stat.wisc.edu>

	* R/groupedData.R: Fixed creation of grouped data from a formula
	only

	* R/newGenerics.R: Renamed the initialize generic and all methods
	and calls to Initialize so as not to conflict with the methods
	package.

2002-07-23  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (update.lme): Fix formula handling in update methods
	(Brian Ripley).

2002-04-20  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R: Bug fix by SDR - convergence criterion was being
	calculated incorrectly.

2002-04-04  Douglas Bates  <bates@stat.wisc.edu>

	* man/getVarCov.Rd: Added an example of the type="marginal"
	Corrected misplaced brace.

	* R/VarCov.R (getVarCov.lme): Added the getVarCov functions
	contributed by Mary Lindstrom <lindstro@biostat.wisc.edu>

2002-03-27  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (anova.lme): Change strvar != "NA" to !is.na(strvar)

2002-03-05  Douglas Bates  <bates@stat.wisc.edu>
