@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-37
-Date: 2003-01-30
+Version: 3.1-38
+Date: 2003-02-10
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
